; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_ofw_graph.c_ofw_graph_get_endpoint_by_idx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_ofw_graph.c_ofw_graph_get_endpoint_by_idx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"endpoint\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"reg\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ofw_graph_get_endpoint_by_idx(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i64 @ofw_bus_find_child(i64 %9, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i64, i64* %6, align 8
  store i64 %14, i64* %3, align 8
  br label %36

15:                                               ; preds = %2
  %16 = load i64, i64* %4, align 8
  %17 = call i64 @OF_child(i64 %16)
  store i64 %17, i64* %7, align 8
  br label %18

18:                                               ; preds = %32, %15
  %19 = load i64, i64* %7, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %18
  %22 = load i64, i64* %7, align 8
  %23 = call i64 @OF_getencprop(i64 %22, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i64* %8, i32 8)
  %24 = icmp sle i64 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %21
  %26 = load i64, i64* %8, align 8
  %27 = load i64, i64* %5, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %25, %21
  br label %32

30:                                               ; preds = %25
  %31 = load i64, i64* %7, align 8
  store i64 %31, i64* %3, align 8
  br label %36

32:                                               ; preds = %29
  %33 = load i64, i64* %7, align 8
  %34 = call i64 @OF_peer(i64 %33)
  store i64 %34, i64* %7, align 8
  br label %18

35:                                               ; preds = %18
  store i64 0, i64* %3, align 8
  br label %36

36:                                               ; preds = %35, %30, %13
  %37 = load i64, i64* %3, align 8
  ret i64 %37
}

declare dso_local i64 @ofw_bus_find_child(i64, i8*) #1

declare dso_local i64 @OF_child(i64) #1

declare dso_local i64 @OF_getencprop(i64, i8*, i64*, i32) #1

declare dso_local i64 @OF_peer(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
